# csb-project

./: README.md  app.py  db.py  init_db.py  pyproject.toml  routes.py
templates/: create_post.html  dashboard.html  index.html  login.html  register.html  show_post.html
