[project]
name = "csb-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Sebastian Beijar",email = "sebastian.beijar@helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
